--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^4.0.0",
+        "alpinejs": "^3.10.3",
         "autoprefixer": "^10.4.12",
         "core-js": "^3.23.0",
         "postcss": "^8.4.16",
