--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
         "alpinejs": "^3.10.3",
         "autoprefixer": "^10.4.12",
         "core-js": "^3.23.0",
+        "husky": ">=6",
+        "lint-staged": ">=10",
         "postcss": "^8.4.16",
         "postcss-loader": "^7.0.1",
+        "prettier": "2.7.1",
+        "prettier-plugin-tailwindcss": "^0.1.13",
         "regenerator-runtime": "^0.13.9",
         "tailwindcss": "^3.1.8",
         "webpack": "^5.74.0",
@@ -25,6 +29,10 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production --progress",
+        "prepare": "husky install"
+    },
+    "lint-staged": {
+        "*.{js,css,md}": "prettier --write"
     }
 }
