Update prettier command

--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
         "prepare": "husky install"
     },
     "lint-staged": {
-        "*.{js,css,md}": "prettier --write"
+        "**/*.{js,css,md}": "prettier --write"
     }
 }
